<resources>
    <string name="app_name">Vehicle Manager</string>
    <string name="title_activity_update_person">Update employee</string>
    <string name="title_activity_login">Sign-in</string>

    <!-- ui titles -->
    <string name="title_new_employee">New employee</string>
    <string name="title_new_vehicle">New vehicle</string>
    <string name="title_register">Register</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_employees">Employees</string>
    <string name="title_manage">Manage</string>
    <string name="title_login">Login</string>
    <string name="title_edit_person">Edit employee</string>
    <string name="title_edit_vehicle">Edit vehicle</string>
    <string name="title_profile">Profile</string>

    <!-- ui buttons -->
    <string name="button_new">New</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_submit">Submit</string>
    <string name="button_profile">Profile</string>
    <string name="button_persons">Employees</string>
    <string name="button_vehicles">Vehicles</string>
    <string name="button_logout">Logout</string>
    <string name="button_sign_in">Sign-in</string>
    <string name="button_create_account">Create account</string>
    <string name="button_delete">Delete</string>

    <!-- ui hints -->
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_company">Company</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_type">Type</string>
    <string name="hint_plate_number">Plate number</string>
    <string name="hint_color">Color</string>
    <string name="hint_description">Add description</string>
    <string name="hint_tap_to_set_servicing_date">" Tap to set servicing date"</string>



</resources>
