<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleEditVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_edit_vehicle"
        android:textSize="40sp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/inputType"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/titleEditVehicle"
        android:hint="@string/hint_type"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/inputRegistration"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/inputType"
        android:hint="@string/hint_plate_number"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/inputColor"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/inputRegistration"
        android:hint="@string/hint_color"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/inputServiceDate"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_below="@+id/inputColor"
        android:gravity="center_vertical"
        android:hint="@string/hint_tap_to_set_servicing_date"
        android:layout_centerHorizontal="true"
        android:onClick="datePicker"
        />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputServiceDate"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <Spinner
        android:id="@+id/spinnerPersons"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputDescription"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>