<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_add_new"
        android:textSize="40sp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/navSave"
        android:text="@string/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="setVehicleFromForm"
        />

    <EditText
        android:id="@+id/inputType"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/titleAdd"
        android:hint="@string/hint_type"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/inputRegistration"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputType"
        android:hint="@string/hint_plate_number"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/inputColor"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputRegistration"
        android:hint="@string/hint_color"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputColor"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />

    <!--
    <DatePicker
        android:id="@+id/inputServicingDate"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/inputDescription"
        android:datePickerMode="spinner"
        android:layout_alignParentStart="true" />
        -->

    <Spinner
        android:id="@+id/spinnerPersons"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputDescription"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>