<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="#7283bf"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <ImageView
        android:background="@drawable/person_icon_white_fill"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstName"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#000"
            android:paddingLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_first_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lastName"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#000"
            android:paddingLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_last_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/email"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#000"
            android:paddingLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:onClick="alertForDelete"
        android:background="@drawable/delete_icon_96px_white_cross"
        android:textAllCaps="false" />

</LinearLayout>